[package]
name = "datier"
version = "1.0.0"
authors = ["Tilman Schmidt <AccessKeymaster@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kamadak-exif = "0.3"
clap = "~2.33.0"
glob = "0.3.0"
snafu = { version = "0.4", default-features = false, features = ["rust_1_30"]}